testcases/semantic_error/uninit_var_if.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn foo(): u64 {
        let n: u64;
        if false {
            return n;
        } else {
            n = 2;
            return n;
        }
    }
}
